Begin changing the code to more flexibility