@@ -5,35 +5,35 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
-import automaton.State;
+import vspa.VRA_State;
 import vspa.ProceduralAutomaton;
 
 public class JSONProceduralAutomaton extends ProceduralAutomaton {
-    KeyGraph keyGraph;
+    KeyGraph<VRA_State> keyGraph;
 
-    public JSONProceduralAutomaton(String proceduralSymbol, State initialState) {
+    public JSONProceduralAutomaton(String proceduralSymbol, VRA_State initialState) {
         super(proceduralSymbol, initialState);
     }
 
     public void createKeyGraph(Set<String> keySymbols) {
-        keyGraph = new KeyGraph();
+        keyGraph = new KeyGraph<>();
 
-        Set<Vertex> vertices = new HashSet<>();
+        Set<Vertex<VRA_State>> vertices = new HashSet<>();
 
-        Set<State> visited = new HashSet<>();
-        List<State> states = new ArrayList<>();
+        Set<VRA_State> visited = new HashSet<>();
+        List<VRA_State> states = new ArrayList<>();
         states.add(this.getInitalState());
         visited.add(this.getInitalState());
 
         while (!states.isEmpty()) {
-            State state = states.remove(0);
+            VRA_State state = states.removeFirst();
             for (String key : keySymbols) {
-                for (State successor : state.getTransitions(key)) {
-                    for (Set<State> endStates : successor.getAllTransitions().values()) {
-                        for (State endState : endStates) {
-                            vertices.add(new Vertex(state, endState, key));
+                for (VRA_State successor : state.getTransitions(key)) {
+                    for (Set<VRA_State> endStates : successor.getAllTransitions().values()) {
+                        for (VRA_State endState : endStates) {
+                            vertices.add(new Vertex<>(state, endState, key));
                             
-                            for (State nextState : endState.getTransitions("#")) {
+                            for (VRA_State nextState : endState.getTransitions("#")) {
                                 if (!visited.contains(nextState)) {
                                     visited.add(nextState);
                                     states.add(nextState);
@@ -45,9 +45,9 @@ public class JSONProceduralAutomaton extends ProceduralAutomaton {
             }
         }
 
-        for (Vertex v1 : vertices) {
+        for (Vertex<VRA_State> v1 : vertices) {
             keyGraph.addVertex(v1);
-            for (Vertex v2 : vertices) {
+            for (Vertex<VRA_State> v2 : vertices) {
                 if (v1.endState.getTransitions("#").contains(v2.startState)) {
                     keyGraph.addEdge(v1, v2);
                 }
